assets/css/extended/shortcodes.css
.bookmark {
  margin: 4px 0;
  margin-bottom: 16px;
  width: 100%;
  box-sizing: border-box;
  text-decoration: none;
  /* border: 1px solid rgba($gray, 0.5) !important; */
  border: 1px solid var(--border);
  border-radius: 10px;
  display: flex;
  overflow: hidden;
  user-select: none;
  box-shadow: none !important;
}

.bookmark > div:first-child {
  flex: 4 1 180px;
  padding: 12px 14px 14px;
  overflow: hidden;
  text-align: left;
  /* color: $gray; */
}

.bookmark-title {
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  min-height: 24px;
  margin-bottom: 2px;
}

.bookmark-description {
  font-size: 12px;
  line-height: 16px;
  opacity: 0.8;
  height: 32px;
  overflow: hidden;
}

.bookmark-link {
  display: flex;
  margin-top: 6px;
}

.bookmark-link > img {
  width: 16px;
  height: 16px;
  min-width: 16px;
  margin-right: 6px;
}

.bookmark-link > div {
  font-size: 12px;
  line-height: 16px;
  color: var(--border);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.bookmark-image {
  flex: 1 1 180px;
  position: relative;
}

.bookmark-image img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: absolute;

  margin: 0;
}

.callout {
    background: var(--code-bg);
    padding: 20px;
    margin-bottom: 16px;
    border-radius: 10px;

    display: flex;
    flex-direction: row;
}

.callout-emoji {
  font-family: emoji;
  font-family: Apple Color Emoji, Segoe UI Emoji, NotoColorEmoji, Segoe UI Symbol, Android Emoji, EmojiSymbols;
}

.callout-image {
    margin: 0 !important;
    width: 2em;
    height: 1.5em;
}

.callout-inner {
    margin-left: 1em;
}

@media (max-width: 767px) {
    .callout {
        padding: 1.5em 0.75em 1.5em 0.6em;
    }
    .callout-inner {
        margin-left: 0.5em;
    }
}

a.link-highlight {
  box-shadow: none;
  position: relative;
}

a.link-highlight::after, a.link-highlight::before {
  content: "";

  /* Fill link text */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  z-index: -1;
}

a.link-highlight::after {
  opacity: 0.4;
  background: linear-gradient(180deg, transparent 60%, var(--highlight-color) 60%);

  transition: opacity 0.5s ease-out;
  -webkit-transition: opacity 0.5s ease-out;
}

a.link-highlight::before {
  opacity: 0.0;
  background: linear-gradient(180deg, transparent 0%, var(--highlight-color) 0%);

  transition: opacity 0.5s ease-in;
  -webkit-transition: opacity 0.5s ease-in-out;
}

a.link-highlight:hover::after{
  opacity: 0.0;
}

a.link-highlight:hover::before {
  opacity: 0.5;
}

